fix:align items center, set border radius

--- a/client/src/components/help/Help.css
+++ b/client/src/components/help/Help.css
@@ -2,10 +2,17 @@
   display: flex;
   width: 100%;
   flex-direction: column;
+  align-items: center;
+  overflow-x: hidden;
 }
 
 .querysection {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  padding: 10px;
   background-color: yellow;
+  width: 100%;
   height: 80%;
 }
 
@@ -24,16 +31,23 @@ h3 {
   display: flex;
   width: 50%;
   flex-direction: row;
+  justify-content: center;
 }
 .search_icon {
   background-color: whitesmoke;
   height: 22px;
   padding: 10px;
+  border-radius: 25px;
   flex-direction: row;
 }
 
-input {
+.input {
   border-radius: 25px;
+  width: 100%;
+  outline: none;
+  border: none;
+  font-size: 16px;
+  padding: 10px;
 }
 
 .help_section {
@@ -42,10 +56,10 @@ input {
   align-items: center;
   column-gap: 100px;
   margin-top: 50px;
-  margin-left: 200px;
+  /* margin-left: 200px; */
 }
 
-img {
-  display: flex;
+.section > img {
   width: 300px;
+  height: 300px;
 }
